--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://Ved:Ved444@cluster0.ooh9pfo.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=plants
+spring.data.mongodb.uri=mongodb+srv://V************:********@cluster**********************
+spring.data.mongodb.database=***************
